Issue 1: added directories, spring boot config, dummy model and config

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,2 +1,10 @@
-spring.application.name: employee-api
-server.port: 8111
+spring:
+  application:
+    name: employee-api
+
+server:
+  port: 8111
+
+employee:
+  api:
+    base-url: http://localhost:8112/api/v1/employee
